fix overflow-x issue

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   scroll-behavior: smooth;
 }
 body {
+  overflow-x: clip;
   background-color: black;
 }
 
